[package]
name = "injector"
version = "0.1.0"
authors = ["naari3 <naari.named@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winnt", "psapi", "processthreadsapi", "errhandlingapi", "handleapi", "memoryapi", "libloaderapi", "minwinbase", "synchapi", "winbase"] }
