[package]
name = "ppt2-sync"
version = "0.1.0"
authors = ["naari3 <naari.named@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.7.2"
named_pipe = "0.4.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winnt", "tlhelp32", "impl-default", "errhandlingapi", "handleapi", "processthreadsapi", "memoryapi"] }
